--- a/index.html
+++ b/index.html
@@ -175,10 +175,7 @@
 
                     <div class="flex flex-col md:flex-row-reverse items-center justify-center w-full mb-12">
                         <div class="md:w-1/2 px-4 text-left md:pl-12">
-                            <h3 class="text-2xl font-semibold text-custom-blue mb-2">
-                                <span class="text-custom-blue text-5xl mb-4 inline-block align-middle">🔎</span>
-                                2. Recherche et Validation
-                            </h3>
+                            <h3 class="text-2xl font-semibold text-custom-blue mb-2">🔎 2. Recherche et Validation</h3>
                             <p class="text-gray-700">Nous recherchons, vérifions et vous proposons les meilleures offres. Vous validez le véhicule choisi.</p>
                         </div>
                         <div class="relative z-10 bg-custom-blue text-white rounded-full w-12 h-12 flex items-center justify-center text-xl font-bold shadow-lg md:mx-0 mx-auto mt-4 md:mt-0">2</div>
@@ -296,10 +293,6 @@
                         <p class="text-gray-700">En plus du prix du véhicule et de nos frais de service, il faut prévoir la TVA (si le véhicule n'est pas déjà acquitté en Europe), les frais de douane (si hors UE), le quitus fiscal et les frais d'immatriculation (carte grise).</p>
                     </div>
                     <div class="bg-white/80 p-6 rounded-lg shadow-md mb-4">
-                        <h3 class="text-xl font-semibold text-custom-blue mb-2">Le véhicule est-il garanti ?</h3>
-                        <p class="text-gray-700">Oui, la plupart des véhicules récents importés bénéficient de la garantie constructeur européenne, valable en France. Nous proposons également des extensions de garantie si vous le souhaitez.</p>
-                    </div>
-                    <div class="bg-white/80 p-6 rounded-lg shadow-md mb-4">
                         <h3 class="text-xl font-semibold text-custom-blue mb-2">Comment se passe le paiement ?</h3>
                         <p class="text-gray-700">Le paiement est sécurisé et échelonné. Un acompte est demandé pour la recherche et la validation, puis le solde lors de la livraison ou de la prise en charge du véhicule.</p>
                     </div>
@@ -372,11 +365,8 @@
                 <a href="#" class="text-gray-300 hover:text-white text-2xl" aria-label="Facebook">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M14 13.5h2.5l1-4H14v-2c0-1.5 0.49-2.5 2.5-2.5H18V.5c-.41-.05-.82-.08-1.24-.08C14.16.42 12.5 2.05 12.5 5.25V8H10v4h2.5v7.5h3.5V13.5z"/></svg>
                 </a>
-                <a href="#" class="text-gray-300 hover:text-white text-2xl" aria-label="Instagram">
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4c0 3.2-2.6 5.8-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8C2 4.6 4.6 2 7.8 2zm-.2 2A2.6 2.6 0 005 7.6v8.8A2.6 2.6 0 007.6 19h8.8a2.6 2.6 0 002.6-2.6V7.6A2.6 2.6 0 0016.4 5H7.6zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6zm6.5-3a1.25 1.25 0 100 2.5 1.25 1.25 0 000-2.5z"/></svg>
-                </a>
-                <a href="#" class="text-gray-300 hover:text-white text-2xl" aria-label="LinkedIn">
-                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.044-1.852-3.044-1.853 0-2.136 1.445-2.136 2.955v5.658H9.276V9.276h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 01-2.064-2.062 2.062 2.062 0 012.064-2.063 2.062 2.062 0 012.063 2.063 2.062 2.062 0 01-2.063 2.062zm1.787 13.019H3.55v-11.1h3.574v11.1zM22.227 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.456c.98 0 1.772-.773 1.772-1.729V1.729C24 .774 23.207 0 22.227 0z"/></svg>
+                <a href="#" class="text-gray-300 hover:text-white text-2xl" aria-label="TikTok">
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12.525 2.118c-.89 0-1.748.04-2.583.132-.346.04-.637.333-.674.679-.05.474-.087.97-.087 1.48v5.334c0 .546-.444.99-.99.99-.546 0-.99-.444-.99-.99V5.006c0-.546-.444-.99-.99-.99-.546 0-.99.444-.99.99v4.298c0 2.215 1.796 4.011 4.011 4.011h4.011c.546 0 .99.444.99.99v4.957c0 .546.444.99.99.99s.99-.444.99-.99V12.01c0-2.215-1.796-4.011-4.011-4.011H8.506c-.546 0-.99-.444-.99-.99V2.973c0-.546-.444-.99-.99-.99z"/></svg>
                 </a>
             </div>
         </div>
