--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -132,7 +132,7 @@
 
         <h2>10. Modifications de la politique de confidentialité</h2>
         <p>Nous nous réservons le droit de modifier la présente Politique de Confidentialité à tout moment. Toute modification sera publiée sur cette page. Nous vous encourageons à consulter régulièrement cette page pour prendre connaissance des éventuelles mises à jour.</p>
-        <p>Dernière mise à jour : [Date de la dernière mise à jour, ex: 25 mai 2025]</p>
+        <p>Dernière mise à jour : 13 juillet 2025</p>
     </div>
 </body>
 </html>
