--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <!-- Icônes modernes (PNG + Apple + haut DPI) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest"> <!-- optionnel mais propre -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG2EE0MX9S"></script>
 <script>
@@ -458,5 +463,6 @@
     </script>
 </body>
 </html>
+
 
 
